tests/ui/attributes/validation-on-associated-items-issue-121537.stderr
error: attribute value must be a literal
  --> $DIR/validation-on-associated-items-issue-121537.rs:2:13
   |
LL |     #[doc = MyTrait]
   |             ^^^^^^^
   |
help: you might have meant to write a string literal
   |
LL |     #[doc = "MyTrait"]
   |             +       +

error: aborting due to 1 previous error

